# nb-cli-plugin-zhenxun

./: README.md  pyproject.toml
nb_cli_plugin_zhenxun/: __init__.py  cli.py  meta.py  plugin.py
nb_cli_plugin_zhenxun/commands/: __init__.py  create.py  run.py
nb_cli_plugin_zhenxun/handlers/: __init__.py  create.py  download.py
nb_cli_plugin_zhenxun/utils/: download_help.py  git_help.py  http_utils.py
nb_cli_plugin_zhenxun/utils/github_utils/: func.py  models.py
